# TraderMCP

./: .env.example  .gitignore  README.md  check_install.py  pyproject.toml  start.sh
docker/: .dockerignore  .env.example  Dockerfile  docker-compose.yml
examples/: usage_example.py
ib_tws/: .env.example  docker-compose.yaml
src/: __init__.py  config.py  ib_client.py  logger.py  models.py  server.py
src/cache/: __init__.py  cache_utils.py  db_manager.py
src/risk/: __init__.py  risk_manager.py
src/tools/: __init__.py  account.py  calendar.py  fundamentals.py  market_data.py  options.py  orders.py  positions.py  quotes.py
src/utils/: __init__.py  cache_utils.py
